Add Model store mechanism (#280)

--- a/example/autoencoder/autoencoder.yml
+++ b/example/autoencoder/autoencoder.yml
@@ -1,14 +1,12 @@
-autoencoder: &autoencoder
+encoder: &encoder
   typename: Sequential
   args:
+    name: encoder
     input_config:
       typename: Input
       reuse: True
       name: input_image
     layer_configs:
-      #--------------------
-      # Decorder
-      #--------------------
       - typename: Conv2D
         args: &conv2d_1
           n_filters: 32
@@ -40,16 +38,30 @@ autoencoder: &autoencoder
       - typename: BatchNormalization
         args:
           name: layer4/BN
-      #--------------------
-      # Noise
-      #--------------------
+
+noise: &noise
+  typename: Sequential
+  args:
+    name: noise
+    input_config:
+      typename: Model
+      name: encoder
+      fetch: output
+    layer_configs:
       - typename: Anonymous
         args:
           exp: x + NormalRandom()
           name: layer5/noise
-      #--------------------
-      # Encorder
-      #--------------------
+
+decoder: &decoder
+  typename: Sequential
+  args:
+    name: decoder
+    input_config:
+      typename: Model
+      name: noise
+      fetch: output
+    layer_configs:
       - typename: Conv2DTranspose
         args:
           << : *conv2d_2
@@ -85,9 +97,25 @@ autoencoder: &autoencoder
         args:
           name: layer8/ReLU
 
+autoencoder: &autoencoder
+  typename: Container
+  args:
+    input_config:
+      typename: Input
+      reuse: True
+      name: input_image
+    model_configs:
+      - << : *encoder
+        name: encoder
+      - << : *noise
+        name: noise
+      - << : *decoder
+        name: decoder
+
 error: &error
   typename: Graph
   args:
+    name: error
     node_configs:
       - typename: SSE
         args:
@@ -98,8 +126,12 @@ error: &error
             reuse: True
             name: input_image
           prediction:
-            typename: Tensor
-            name: layer8/ReLU/output
+            typename: Model
+            name: decoder
+            fetch: output
+    output_config:
+      typename: Tensor
+      name: reconstruction_error/output
 
 typename: Container
 args:
@@ -110,11 +142,13 @@ args:
       shape: {input_shape}
   output_config:
     reconstruction:
-      typename: Tensor
-      name: layer8/ReLU/output
+      typename: Model
+      name: decoder
+      fetch: output
     error:
-      typename: Tensor
-      name: reconstruction_error/output
+      typename: Model
+      name: error
+      fetch: output
   model_configs: &model_configs
     - << : *autoencoder
       name: autoencoder
