--- a/example/autoencoder/autoencoder.yml
+++ b/example/autoencoder/autoencoder.yml
@@ -100,6 +100,7 @@ decoder: &decoder
 autoencoder: &autoencoder
   typename: Container
   args:
+    name: autoencoder
     input_config:
       typename: Input
       reuse: True
@@ -133,6 +134,25 @@ error: &error
       typename: Tensor
       name: reconstruction_error/output
 
+optimization: &optimization
+  typename: Graph
+  args:
+    name: optimization
+    node_configs:
+      - typename: Adam
+        args:
+          name: Adam
+          learning_rate: 0.01
+        input:
+          loss:
+            typename: Model
+            name: error
+            fetch: output
+          wrt:
+            typename: Model
+            name: autoencoder
+            fetch: parameter
+
 typename: Container
 args:
   input_config:
@@ -154,3 +174,5 @@ args:
       name: autoencoder
     - << : *error
       name: error
+    - << : *optimization
+      name: optimization
