--- a/tests/integration/data/initializer/uniform.yml
+++ b/tests/integration/data/initializer/uniform.yml
@@ -1,8 +1,8 @@
 initializer:
   typename: UniformInitializer
   args:
-    minval: -2.0 
-    maxval: 6.0
+    min_value: -2.0 
+    max_value: 6.0
 
 test_config:
   shape: [16, 16, 8, 8]
