--- a/example/autoencoder/autoencoder.yml
+++ b/example/autoencoder/autoencoder.yml
@@ -121,7 +121,7 @@ error: &error
       - typename: SSE
         args:
           name: reconstruction_error
-        input:
+        input_config:
           target:
             typename: Input
             reuse: True
@@ -143,7 +143,7 @@ optimization: &optimization
         args:
           name: Adam
           learning_rate: 0.01
-        input:
+        input_config:
           loss:
             typename: Model
             name: error
