--- a/tests/integration/data/layer/batch_normalization_2d_learn.yml
+++ b/tests/integration/data/layer/batch_normalization_2d_learn.yml
@@ -13,7 +13,7 @@ model:
           offset: 0.5
           learn: True
           decay: 0.999
-          name: ''
+          scope: ''
 
 input: input_randn_3x5_offset_3.h5
 
