--- a/circle.yml
+++ b/circle.yml
@@ -56,6 +56,15 @@ stages:
       - type: shell
         name: MNIST classification Tensorflow
         command: LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC LUCHADOR_NN_DTYPE=float32 ./tests/integration/run_mnist.sh
+      - type: shell
+        name: GAN Theano 32 bit
+        command: LUCHADOR_NN_BACKEND=theano THEANO_FLAGS='floatX=float32' ./tests/integration/run_gan.sh
+      - type: shell
+        name: GAN Theano 64 bit
+        command: LUCHADOR_NN_BACKEND=theano THEANO_FLAGS='floatX=float64' ./tests/integration/run_gan.sh
+      - type: shell
+        name: GAN Tensorflow
+        command: LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC LUCHADOR_NN_DTYPE=float32 ./tests/integration/run_gan.sh
       # Style check
       - type: shell
         name: Style Check
