--- a/circle.yml
+++ b/circle.yml
@@ -39,32 +39,14 @@ stages:
         name: Optimizer Numerical Compatibility Test
         command: ./tests/integration/run_optimizer_numerical_compatibility_tests.sh
       - type: shell
-        name: AE Theano 32 bit
-        command: LUCHADOR_NN_BACKEND=theano THEANO_FLAGS='floatX=float32' ./tests/integration/run_autoencoder.sh
+        name: Examples Theano 32 bit
+        command: LUCHADOR_NN_BACKEND=theano THEANO_FLAGS='floatX=float32' ./tests/integration/run_examples.sh
       - type: shell
-        name: AE Theano 64 bit
-        command: LUCHADOR_NN_BACKEND=theano THEANO_FLAGS='floatX=float64' ./tests/integration/run_autoencoder.sh
+        name: Examples Theano 64 bit
+        command: LUCHADOR_NN_BACKEND=theano THEANO_FLAGS='floatX=float64' ./tests/integration/run_examples.sh
       - type: shell
-        name: AE Tensorflow
-        command: LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC LUCHADOR_NN_DTYPE=float32 ./tests/integration/run_autoencoder.sh
-      - type: shell
-        name: MNIST classification Theano 32 bit
-        command: LUCHADOR_NN_BACKEND=theano THEANO_FLAGS='floatX=float32' ./tests/integration/run_mnist.sh
-      - type: shell
-        name: MNIST classification Theano 64 bit
-        command: LUCHADOR_NN_BACKEND=theano THEANO_FLAGS='floatX=float64' ./tests/integration/run_mnist.sh
-      - type: shell
-        name: MNIST classification Tensorflow
-        command: LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC LUCHADOR_NN_DTYPE=float32 ./tests/integration/run_mnist.sh
-      - type: shell
-        name: GAN Theano 32 bit
-        command: LUCHADOR_NN_BACKEND=theano THEANO_FLAGS='floatX=float32' ./tests/integration/run_gan.sh
-      - type: shell
-        name: GAN Theano 64 bit
-        command: LUCHADOR_NN_BACKEND=theano THEANO_FLAGS='floatX=float64' ./tests/integration/run_gan.sh
-      - type: shell
-        name: GAN Tensorflow
-        command: LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC LUCHADOR_NN_DTYPE=float32 ./tests/integration/run_gan.sh
+        name: Examples Tensorflow
+        command: LUCHADOR_NN_BACKEND=tensorflow LUCHADOR_NN_CONV_FORMAT=NHWC LUCHADOR_NN_DTYPE=float32 ./tests/integration/run_examples.sh
       # Style check
       - type: shell
         name: Style Check
