Disable doc build (#335)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -132,14 +132,14 @@ jobs:
           name: Report Coverage
           command: ./.circleci/report_codacy_test_coverage.sh
       # Build doc and push to gh-pages
-      - run:
-          name: Install Luchador
-          command: pip install -e .
-      - run:
-          name: Build Doc
-          command: |
-            xvfb-run -s "-screen 0 1400x900x24" ./.circleci/build_docs.sh
-            ./.circleci/push_docs.sh
+      # - run:
+      #     name: Install Luchador
+      #     command: pip install -e .
+      # - run:
+      #     name: Build Doc
+      #     command: |
+      #       xvfb-run -s "-screen 0 1400x900x24" ./.circleci/build_docs.sh
+      #       ./.circleci/push_docs.sh
 
 workflows:
   version: 2
